--- a/404.html
+++ b/404.html
@@ -48,10 +48,10 @@
                 <!-- Main navigation -->
                 <ul class="nav navbar-nav">
                     <li >
-                        <a href="/">Leírás</a>
+                        <a href="/">Letöltés</a>
                     </li>
                     <li >
-                        <a href="/download/">Letöltés</a>
+                        <a href="/doc/">Leírás</a>
                     </li>
                 </ul>
 
