--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <!-- Main navigation -->
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href=".">Leírás</a>
+                        <a href=".">Letöltés</a>
                     </li>
                     <li >
-                        <a href="download/">Letöltés</a>
+                        <a href="doc/">Leírás</a>
                     </li>
                 </ul>
 
@@ -67,7 +67,7 @@
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="download/">
+                        <a rel="prev" href="doc/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -79,163 +79,22 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#ingyenes-szociometriai-szoftver">Ingyenes szociometriai szoftver</a></li>
-        <li class="main "><a href="#alapveto-funkciok">Alapvető funkciók</a></li>
-        <li class="main "><a href="#adatok-bevitele">Adatok bevitele</a></li>
-            <li><a href="#a-szemelyi-adatok-bevitele">A személyi adatok bevitele</a></li>
-            <li><a href="#a-felmeresben-szereplo-kerdesek-bevitele">A felmérésben szereplő kérdések bevitele</a></li>
-            <li><a href="#a-kerdes-szerkeszto-hasznalata">A kérdés szerkesztő használata</a></li>
-            <li><a href="#a-valaszok-megadasa">A válaszok megadása</a></li>
-        <li class="main "><a href="#a-generalt-adatok-ertelmezese">A generált adatok értelmezése</a></li>
-            <li><a href="#az-adatok-ful">Az "Adatok" fül</a></li>
-            <li><a href="#a-tablazatok-ful">A "Táblázatok" fül</a></li>
-            <li><a href="#a-szociograf-ful">A "Szociográf" fül</a></li>
-        <li class="main "><a href="#az-adatok-exportalasa">Az adatok exportálása</a></li>
+        <li class="main active"><a href="#letoltes">Letöltés</a></li>
+            <li><a href="#megjegyzes">Megjegyzés</a></li>
+            <li><a href="#kovetelmenyek">Követelmények</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
-<h1 id="ingyenes-szociometriai-szoftver">Ingyenes szociometriai szoftver</h1>
-<p><img alt="Főablak" src="./img/window.png" /></p>
-<h1 id="alapveto-funkciok">Alapvető funkciók</h1>
-<p>A szofver a következő alapvető funckókkal rendelkezik: </p>
+<h1 id="letoltes">Letöltés</h1>
+<p><a href="./files/szociometria.jar">Letöltés</a></p>
+<h4 id="megjegyzes">Megjegyzés</h4>
 <ul>
-<li>A vizsgált csoport kapcsolatrendszerének ábrázolása szociográfon</li>
-<li>A csoportkohéziós mutatók meghatározása</li>
-<li>A csoportlégkör mutatójának meghatározása</li>
-<li>A központ és perem viszonyát kifejező centrális-marginális mutatók meghatározása</li>
-<li>Kölcsönösségi, illetve Gyakorisági táblázat létrehozása</li>
+<li></li>
+<li>A szoftver ingyenes mivoltából kifolyólag helyes működéséért felelősséget nem vállalok.</li>
 </ul>
-<p>Emellett lehetőség van egyedi kérdőívek létrehozására, valamint ezek PDF formátumba való exportálására, tehát a felhasználó által meghatározott kérdések segítségével végezhető el a szociometriai felmérés.</p>
-<h1 id="adatok-bevitele">Adatok bevitele</h1>
-<h2 id="a-szemelyi-adatok-bevitele">A személyi adatok bevitele</h2>
-<p>A felmérésben résztvevő személyekről csak a következő adatokat szükséges megadni: </p>
-<ul>
-<li><strong>Név</strong></li>
-<li><strong>Életkor</strong></li>
-<li><strong>Nem</strong></li>
-</ul>
-<p>Ez az "Adatok" fül megfelelő mezőinek kitöltésével lehetséges.  </p>
-<p><video width="125" height="193" autoplay loop>
-  <source src="img/add.mp4" type="video/mp4">
-</video> </p>
-<h3 id="az-adatok-szerkesztese">Az adatok szerkesztése</h3>
-<p>Ez a táblázat első oszlopában lévő <img class="custom-img" width="25 px" src="img/plus2.png"/> gombbal lenyitható menü segítségével lehetséges.  </p>
-<video width="802" height="192" autoplay loop>
-  <source src="img/edit.mp4" type="video/mp4">
-</video>
-
-<h2 id="a-felmeresben-szereplo-kerdesek-bevitele">A felmérésben szereplő kérdések bevitele</h2>
-<p>A felmérés elvégzéséhez szükség van a kérdőívben is szereplő kérdések betöltésére. Ez korábban létrehozott kérdések megnyitásával, illetve a kérdés szerkesztő használatával valósítható meg.</p>
-<h3 id="korabban-elmentett-kerdesek-betoltese">Korábban elmentett kérdések betöltése</h3>
-<p>Erre a <strong>Fájl</strong> menü <strong>Kérdések importálása</strong> menüpontja ad lehetőséget. Mivel új kérdéssor megnyitása során a már felvitt kérdések mellett a megadott válaszok is törlődnek, célszerű ezt a lépést rögtön a személyek felvitele után - vagy az előtt - elvégezni.  </p>
-<p>Ezek után a betöltött kérdéssor nyomtatás céljából elmenthető PDF formátumban, az <strong>Eszközök</strong> menü <strong>Kérdőív exportálása PDF-be</strong>
-menüpontjával.</p>
-<h2 id="a-kerdes-szerkeszto-hasznalata">A kérdés szerkesztő használata</h2>
-<p>A kérdés szerkesztő nyújt lehetőséget egyedi kérdéssor létrehozására, valamint az ehhez tartozó kérdőív kinyomtatására. A funkció az <strong>Eszközök</strong> menü <strong>Kérdés szerkesztő</strong> menüpontjából érhető el.  </p>
-<p>A megnyíló ablakban a <img class="custom-img" width="30 px" src="img/plus.png"/> gomb megnyomásával adható hozzá új kérdés a listához, a <img class="custom-img" width="30 px" src="img/minus.png"/> gombbal pedig törölhető a legutolsó kérdés.  </p>
-<p><strong>A felső eszköztáron lévő gombok funckiója a következő:</strong>  </p>
-<ul>
-<li>
-<p><img class="custom-img" width="35 px" src="img/save.png"/> <strong>Mentés</strong>: A begépelt kérdések mentése <em>csv</em> formátumban. Ez lehetőséged ad későbbi betöltésre egy másik felmérés esetében.  </p>
-</li>
-<li>
-<p><img class="custom-img" width="35 px" src="img/open.png"/> <strong>Megnyitás</strong>: Korábban elmentett <em>csv</em> formátumú kérdések megnyitása szerkesztésre. Ilyenkor a kérdések még nem adódnak hozzá a jelenlegi fájlhoz.</p>
-</li>
-<li>
-<p><img class="custom-img" width="35 px" src="img/load.png"/> <strong>Betöltés:</strong> Az előzőleg már megnyitott, a fájl által tartalmazott kérdések betöltése. A gomb csak akkor aktív, ha előzőleg már lettek <a href=".#korabban-elmentett-kerdesek-betoltese">megnyitva kérdések.</a></p>
-</li>
-<li>
-<p><img class="custom-img" width="35 px" src="img/add.png"/> <strong>Hozzáadás:</strong>  A jelenleg szerkesztés alatt álló kérdések hozzáadása a megnyitott fájlhoz. Ha a fájl már tartalmaz kérdéseket, azok felülírásra kerülnek a válaszokkal együtt (mivel azok más kérdésekre vonatkoztak). </p>
-</li>
-<li>
-<p><img class="custom-img" width="35 px" src="img/pdf.png"/> <strong>Exportálás:</strong> A kérdésekből kérdőív generálása, és elmentése PDF formátumba.</p>
-</li>
-</ul>
-<p>A <img class="custom-img" width="35 px" src="img/save.png"/>, <img class="custom-img" width="35 px" src="img/add.png"/> és <img class="custom-img" width="35 px" src="img/pdf.png"/> funckiók csak megfelelően kitöltött kérdések esetén működnek. Minden kérdésnek rendelkeznie kell szöveggel és típussal is.</p>
-<p>A <strong>Hozzáadás</strong> funckiót olyan esetben érdemes használni, ha egy olyan csoporton végzünk felmérést, ami korábban már volt vizsgálva. Tehát olyan esetben, amikor a csoport nem, vagy csak kis mértékben változott, a kérdések viszont már nem feltétlenül egyeznek meg a korábbiakkal. Ekkor a válaszok is törlődnek, mivel azok az új felmérésnél már nem relevánsak.  </p>
-<p>Az űrlapok kinyomtatása, és kitöltetése után végezhető el a felmérésben résztvevők válaszainak megadása.</p>
-<h2 id="a-valaszok-megadasa">A válaszok megadása</h2>
-<p>Ha rendelkezésre állnak a kitöltött űrlapok megkezdhető a válaszok bevitele a korábban már létrehozott fájlba. Ez a táblázatban a megfelelő személy sorának kiválasztásával, majd a <strong>(Személy Neve) válaszai</strong> gombra való kattintással megnyíló ablakban végezhető el.</p>
-<p><video width="756" height="428" autoplay loop>
-  <source src="img/answers.mp4" type="video/mp4">
-</video> </p>
-<p>A kérdőívben szereplő kérdésekre a három legördülő menü segítségével adhatóak meg a válaszok.  </p>
-<ul>
-<li>A kérdések között a <img class="custom-img" width="30 px" src="img/leftarrow.png"/> és a <img class="custom-img" width="30 px" src="img/rightarrow.png"/> gombokkal lehet lépkedni.  </li>
-<li>Az <img class="custom-img" width="30 px" src="img/x.png"/> gombbal törölhető egy hibásan megadott válasz.</li>
-</ul>
-<h1 id="a-generalt-adatok-ertelmezese">A generált adatok értelmezése</h1>
-<h2 id="az-adatok-ful">Az "Adatok" fül</h2>
-<p>Az <strong>Adatok</strong> fülön a felhasználó által bevitt adatok mellett számos fontos információ található.</p>
-<h3 id="a-tablazat-adatainak-ertelmezese">A táblázat adatainak értelmezése</h3>
-<ul>
-<li>
-<p><strong>ID</strong>: a felhasználó azonosítója, ami a <a href=".#a-tablazatok-ful"><strong>Táblázatok</strong></a>, illetve a <a href=".#a-szociograf-ful"><strong>Szociográf</strong></a> füleken is látható. </p>
-</li>
-<li>
-<p><strong>Rokonszenv</strong>, <strong>Funkció</strong>, <strong>Népszerűség</strong> és <strong>Tulajdonság</strong> oszlopok: Egy arányszám, ami megmutatja, hogy az adott személyt hányan választották az adott típusú kérdésre válaszként. Értéke 1, ha a személyt a csoport összes többi tagja megválasztolta az adott típusú kérdésre.</p>
-</li>
-<li>
-<p><strong>Csoport</strong> oszlop: Megmutatja, hogy az adott személy a Centrális-Marginális mutató szerint milyen pozícióval rendelkezik a csoporton belül. 
-Jelen esetben a <em>Köztes</em> jelenti a központtal közvetlen, vagy közvetett kapcsolattal rendelkezőket, a <em>Perem</em> pedig a központtal kapcsolatban nem lévő személyeket. A <em>Központ</em> értelemszerűen a központ részét képező személyeket jelöli.<br />
-Ezen oszlop értéke <strong>Nincs adat</strong>, ha a vizsgált csoport nem rendelkezik központi alakzattal. Ez tetszőleges létszámnál előfordulhat.  </p>
-</li>
-<li>
-<p><strong>Szerep</strong> oszlop: megmutatja az adott személy szerepét a csoportban, az összes kérdésre vetített <em>jelentőség index</em> alapján.</p>
-</li>
-</ul>
-<p>Az oszlop fejlécekre való kattintással rendezhető a táblázat az adott oszlopnak megfelelően</p>
-<video width="570" height="354" autoplay loop>
-  <source src="img/table.mp4" type="video/mp4">
-</video>
-
-<h3 id="a-mutatok-ertelmezese">A mutatók értelmezése</h3>
-<p>Az <strong>Adatok</strong> fül jobb oldalán olvasható le a csoporthoz kapcsolódó <em>Kohéziós index</em>, <em>Sűrűségi index</em>, <em>Kölcsönösségi index</em>, valamint a <em>Viszonzott kapcsolatok</em> aránya. Emellett a <em>Centrális-Marginális (CM)</em> mutató is meghatározásra kerül. A mutatók az adatok bevitelével folyamatosan frissülnek. </p>
-<p>A <strong>CM mutató</strong> fejezi ki a csoportszerkezetben a központban lévők, a központhoz kapcsolódók, és a peremen lévők arányát.<br />
-Központnak az olyan zárt alakzatban lévőket tekintjük, akik kapcsolati körének létszáma (saját magát is beleszámolva) eléri a csoport egynegyedét. Zárt alakzatnak azt tekintjük, ahol minden tagnak legalább két kapcsolata van.</p>
-<ul>
-<li><strong>Kohéziós index</strong>: A lehetséges kölcsönös kapcsolatok hány százaléka realizálódott? Átlagos érték: 10-13</li>
-<li><strong>Sűrűségi index</strong>: Hány kölcsönös kapcsolat jut egy személyre? Az átlag 0,9 és 1 között van. Az 1 körüli érték jelenti, hogy átlagosan mindenkinek 2 barátja van.</li>
-<li><strong>Kölcsönösségi index</strong>: A vizsgált személyek hány százalékának van kölcsönös kapcsolata? Átlagos érték: 85-90%</li>
-<li><strong>Viszonzott kapcsolatok</strong>: Hány százaléka kölcsönös a deklarált kapcsolatoknak? Átlagos érték: 40-50%</li>
-</ul>
-<h2 id="a-tablazatok-ful">A "Táblázatok" fül</h2>
-<p>Itt tekinthető meg a <strong>Kölcsönösségi</strong>, illetve <strong>Gyakorisági</strong> táblázat.</p>
-<ul>
-<li>
-<p><strong>Kölcsönösségi táblázat</strong>: A sor és oszlop fejécek a személyek azonosítói. A sorokban szereplő számok megmutatják, hogy az adott személy hány rokonszenvi kapcsolattal rendelkezik az oszlop fejlécek által jelölt személyek irányába. Az utolsó sorban, illetve oszlopban összesített mutatók találhatók. </p>
-</li>
-<li>
-<p><strong>Gyakorisági táblázat</strong>: A sor fejlécek a személyek azonosítói. A sorokban az adott személy által kapott szavazatok száma látható (adott típusú kérdésre vetítve). Az utolsó két sorból olvasható ki a típusokra vonatkozó eloszlás (az adott kérdésben szavazatot kapott személyek száma), illetve ezek alapján az eloszlási mutató (hány tanuló között oszlik meg a választás).</p>
-</li>
-<li>
-<p><strong>Csoportlégkör</strong>: Az adott típusú kapcsolatokra vetített csoportlégkör-mutatók értékét, valamint ezek alapján a normához igazodás mértékét mutatja meg. A csoportlégkör mutatók információt adnak arról, hogy első sorban milyen szempont határozza meg a választásokat. Ideális működésű csoportban a <strong>rokonszenvi választásokat</strong> szubjektív szempontok befolyásolják, tehát a csoport tagjai nem a normához igazodva választják meg baráti kapcsolataikat. Ezzel ellentétben a <strong>funkció választások</strong>nál a norma szerinti választás garantálja az ideális csoportműködést, mivel ekkor a rátermettség, nem pedig a baráti kapcsolatok alapján választják ki a csoporttagok, hogy ki alkalmas egy adott feladat elvégzésére. </p>
-</li>
-</ul>
-<p>A táblázatok között értelemszerűen az ablak alján lévő gombokkal válthatunk.</p>
-<h2 id="a-szociograf-ful">A "Szociográf" fül</h2>
-<p>Itt látható a szoftver által a rokonszenvi kapcsolatok alapján kirajzolt szociográf. </p>
-<p><video width="442" height="388" autoplay loop>
-  <source src="img/graph.mp4" type="video/mp4">
-</video> </p>
-<p>A gráf csúcspontjai átrendezhetőek az átláthatóság érdekében.  </p>
-<p><strong>Kapcsolatok</strong>:  </p>
-<ul>
-<li><img class="custom-img" width="100 px" src="img/egyszeres.png"/> <strong>Egyirányű kapcsolat:</strong> csak a nyíl által mutatott irányban létezik rokonszenvi kapcsolat a személyek között.</li>
-<li><img class="custom-img" width="100 px" src="img/ketiranyu.png"/> <strong>Kétirányú kapcsolat:</strong> mindkét irányban létezik kapcsolat.  </li>
-</ul>
-<p>Az átláthatóság érdekében a kétirányú kapcsolatok nyilak helyett vastagabb vonallal vannak jelölve, valamint a többszörös kapcsolatok nincsenek ábrázolva. A többszörös kapcsolatok száma leolvasható a a <a href=".#a-tablazatok-ful"><strong>Táblázatok</strong></a> fülön lévő gyakorisági táblázatból. </p>
-<h1 id="az-adatok-exportalasa">Az adatok exportálása</h1>
-<p>A szoftver lehetőséget nyújt a generált adatokból PDF formátumú riport készítésére. A következő adatok exportálhatók: </p>
-<ul>
-<li>Szociográf</li>
-<li>Kölcsönösségi és Gyakorisági táblázat</li>
-<li>Szerkezeti mutatók</li>
-<li>A felmérésben résztvevő személyek névsora</li>
-</ul>
-<p>Riport készítésére a <strong>"Fájl"</strong> menü <strong>"Exportálás PDF-be"</strong> menüpontja ad lehetőséget.  </p>
-<p><img alt="" src="./img/export.png" /></p></div>
+<h4 id="kovetelmenyek">Követelmények</h4>
+<p>A szoftver futtatásához a Java futtatási környezet (JRE) leaglább 8-as verziója szükséges. Letöltés: <a href="https://java.com/en/download/">https://java.com/en/download/</a></p></div>
         </div>
 
         <footer class="col-md-12">
@@ -274,5 +133,5 @@ Központnak az olyan zárt alakzatban lévőket tekintjük, akik kapcsolati kör
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2018-07-28 10:21:08
+Build Date UTC : 2018-07-29 10:15:55
 -->
