--- a/index.html
+++ b/index.html
@@ -79,21 +79,33 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#letoltes">Letöltés</a></li>
+        <li class="main active"><a href="#ingyenes-szociometriai-szoftver">Ingyenes szociometriai szoftver</a></li>
+        <li class="main "><a href="#letoltes">Letöltés</a></li>
             <li><a href="#megjegyzes">Megjegyzés</a></li>
-            <li><a href="#kovetelmenyek">Követelmények</a></li>
+            <li><a href="#rendszerkovetelmenyek">Rendszerkövetelmények</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
+<h1 id="ingyenes-szociometriai-szoftver">Ingyenes szociometriai szoftver</h1>
+<p><img alt="" src="./img/window.png" />  </p>
+<ul>
+<li>A szoftver segítséget nyújt a Mérei-féle többszempontú szociometriai felmérés elvégzéséhez.  </li>
+<li>Lehetőséget nyújt a szociográf kirajzolására, valamint a csoportkohéziós, csoportlégkör, illetve centrális-marginális mutatók meghatározására, valamint a kölcsönösségi és gyakorisági táblázat megjelenítésére.</li>
+<li>A kinyert adatokból PDF formátumú riport készíthető.</li>
+</ul>
 <h1 id="letoltes">Letöltés</h1>
-<p><a href="./files/szociometria.jar">Letöltés</a></p>
+<p><a href="./files/szociometria.jar"><strong>A szoftver letöltése</strong></a></p>
+<ul>
+<li>Telepítés nem szükséges, a letöltött <em>zip</em> fájl kicsomagolása után a szoftver a "szociometria.jar" fájlra való kattintással futtatható.  </li>
+<li>A letöltött fájl tartalmaz egy minta kérdéssort <em>(Mérei, 2004)</em>, illetve egy minta adatokkal feltöltött fájlt.</li>
+</ul>
 <h4 id="megjegyzes">Megjegyzés</h4>
 <ul>
 <li></li>
 <li>A szoftver ingyenes mivoltából kifolyólag helyes működéséért felelősséget nem vállalok.</li>
 </ul>
-<h4 id="kovetelmenyek">Követelmények</h4>
+<h4 id="rendszerkovetelmenyek">Rendszerkövetelmények</h4>
 <p>A szoftver futtatásához a Java futtatási környezet (JRE) leaglább 8-as verziója szükséges. Letöltés: <a href="https://java.com/en/download/">https://java.com/en/download/</a></p></div>
         </div>
 
@@ -133,5 +145,5 @@
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2018-07-29 10:15:55
+Build Date UTC : 2018-07-29 10:40:40
 -->
