--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <li>A kinyert adatokból PDF formátumú riport készíthető.</li>
 </ul>
 <h1 id="letoltes">Letöltés</h1>
-<p><a href="./files/szociometria.jar"><strong>A szoftver letöltése</strong></a></p>
+<p><a href="./files/szociometria.zip"><strong>A szoftver letöltése</strong></a></p>
 <ul>
 <li>Telepítés nem szükséges, a letöltött <em>zip</em> fájl kicsomagolása után a szoftver a "szociometria.jar" fájlra való kattintással futtatható.  </li>
 <li>A letöltött fájl tartalmaz egy minta kérdéssort <em>(Mérei, 2004)</em>, illetve egy minta adatokkal feltöltött fájlt.</li>
@@ -145,5 +145,5 @@
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2018-07-29 10:40:40
+Build Date UTC : 2018-07-29 10:47:59
 -->
