--- a/index.html
+++ b/index.html
@@ -87,24 +87,25 @@
 </div></div>
                 <div class="col-md-9" role="main">
 
-<h1 id="ingyenes-szociometriai-szoftver">Ingyenes szociometriai szoftver</h1>
 <p><img alt="" src="./img/window.png" />  </p>
+<h1 id="ingyenes-szociometriai-szoftver">Ingyenes szociometriai szoftver</h1>
 <ul>
 <li>A szoftver segítséget nyújt a Mérei-féle többszempontú szociometriai felmérés elvégzéséhez.  </li>
-<li>Lehetőséget nyújt a szociográf kirajzolására, valamint a csoportkohéziós, csoportlégkör, illetve centrális-marginális mutatók meghatározására, valamint a kölcsönösségi és gyakorisági táblázat megjelenítésére.</li>
+<li>Lehetőséget nyújt a szociográf kirajzolására, valamint a csoportkohéziós, csoportlégkör, illetve centrális-marginális mutatók meghatározására, illetve a kölcsönösségi és gyakorisági táblázat megjelenítésére.</li>
 <li>A kinyert adatokból PDF formátumú riport készíthető.</li>
 </ul>
 <h1 id="letoltes">Letöltés</h1>
 <p><a href="./files/szociometria.zip"><strong>A szoftver letöltése</strong></a></p>
 <ul>
 <li>Telepítés nem szükséges, a letöltött <em>zip</em> fájl kicsomagolása után a szoftver a "szociometria.jar" fájlra való kattintással futtatható.  </li>
-<li>A letöltött fájl tartalmaz egy minta kérdéssort <em>(Mérei, 2004)</em>, illetve egy minta adatokkal feltöltött fájlt.</li>
+<li>A letöltött fájl tartalmaz egy minta kérdéssort <em>(Mérei, 2004)</em>, illetve egy minta adatokkal feltöltött fájlt (adatok.dat).</li>
 </ul>
 <h4 id="megjegyzes">Megjegyzés</h4>
 <ul>
-<li></li>
+<li>A szofver jelenleg is fejlesztés alatt áll, működésbeli hibák előfordulhatnak.</li>
 <li>A szoftver ingyenes mivoltából kifolyólag helyes működéséért felelősséget nem vállalok.</li>
 </ul>
+<p>A szoftvert fejlesztette: Fekete Ákos, <a href="mailto:fekete.akos01@gmail.com">fekete.akos01@gmail.com</a></p>
 <h4 id="rendszerkovetelmenyek">Rendszerkövetelmények</h4>
 <p>A szoftver futtatásához a Java futtatási környezet (JRE) leaglább 8-as verziója szükséges. Letöltés: <a href="https://java.com/en/download/">https://java.com/en/download/</a></p></div>
         </div>
@@ -145,5 +146,5 @@
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2018-07-29 11:06:22
+Build Date UTC : 2018-07-29 20:06:11
 -->
