--- a/index.html
+++ b/index.html
@@ -58,19 +58,10 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="#" data-toggle="modal" data-target="#mkdocs_search_modal">
-                        <i class="fa fa-search"></i> Search
+                        <i class="fa fa-search"></i> Keresés
                     </a>
                 </li>
-                    <li class="disabled">
-                        <a rel="next" >
-                            <i class="fa fa-arrow-left"></i> Previous
-                        </a>
-                    </li>
-                    <li >
-                        <a rel="prev" href="doc/">
-                            Next <i class="fa fa-arrow-right"></i>
-                        </a>
-                    </li>
+                   
             </ul>
         </div>
     </div>
