--- a/index.html
+++ b/index.html
@@ -58,10 +58,19 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="#" data-toggle="modal" data-target="#mkdocs_search_modal">
-                        <i class="fa fa-search"></i> Keresés
+                        <i class="fa fa-search"></i> Search
                     </a>
                 </li>
-                   
+                    <li class="disabled">
+                        <a rel="next" >
+                            <i class="fa fa-arrow-left"></i> Previous
+                        </a>
+                    </li>
+                    <li >
+                        <a rel="prev" href="doc/">
+                            Next <i class="fa fa-arrow-right"></i>
+                        </a>
+                    </li>
             </ul>
         </div>
     </div>
@@ -137,5 +146,5 @@
 
 <!--
 MkDocs version : 0.16.3
-Build Date UTC : 2018-07-29 20:06:11
+Build Date UTC : 2018-07-29 20:17:21
 -->
